2003-10-25  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Remove redundant declaration of init_localfs().

	* mcserv.c: Don't use HAVE_CRYPT from extraonf.h.
	* samba/include/includes.h: Likewise.

2003-10-24  Pavel Roskin  <proski@gnu.org>

	* ftpfs.c: Remove the rest of source routing code.
	* xdirentry.h: Likewise.

	* ftpfs.c (setup_source_route): Remove.  It's a badly
	implemented hack that was never enabled.

2003-10-16  Pavel Roskin  <proski@gnu.org>

	* direntry.c (vfs_s_find_entry_tree): Canonicalize path.

	* direntry.c (vfs_s_resolve_symlink): Don't use buffers of fixed
	size.  This fixes a security hole.  Always start from the root.
	Remove broken code for making symlinks relative.
	(vfs_s_find_entry_tree): Protect against long path, since this
	function uses a buffer of fixed size.
	(vfs_s_fullpath): Implement support for archives (real trees).

2003-10-16  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* vfs.c (mc_open): Fix rare memory leak on failure.

2003-10-16  Pavel Roskin  <proski@gnu.org>

	* direntry.c (vfs_s_setctl): Implement VFS_SETCTL_FLUSH.
	* ftpfs.c: Remove ftpfs_flushdir.  Use MEDATA->flush.
	* fish.c: Use MEDATA->flush.

	* direntry.c (vfs_s_setctl): Add support to VFS_SETCTL_LOGFILE.
	* ftpfs.c (ftpfs_set_debug): Remove.

	* names.c: Merge ...
	* utilvfs.c: ... here.
	* names.h: Merge ...
	* utilvfs.h: ... here.
	* Makefile.am: Remove references to names.c and names.h.

	* xdirentry.h: Rename vfs_s_data to vfs_s_subclass.
	* cpio.c: Initialize only non-zero fields in vfs_s_subclass.
	* fish.c: Likewise.
	* ftpfs.c: Likewise.
	* tar.c: Likewise.

	* vfs.h: Rename commands for mc_ctl() and mc_setctl() to make it
	clear which function they are used with.
	* vfs.c (mc_ctl): Change last argument to (void*).
	(mc_set): Likewise.
	Adjust all dependencies.

	* xdirentry.h: Move system includes to the files that need them.

	* xdirentry.h: Fix typos in field names.

	* xdirentry.h: Cleanup unused or write-only fields.  Adjust all
	dependencies.
